--- a/templates/todas-categorias.html
+++ b/templates/todas-categorias.html
@@ -48,8 +48,8 @@
         </div>
         <nav class="templatemo-left-nav">          
           <ul>
-            <li><a href="#" class="active"><i class="fa fa-home fa-fw"></i>Principal</a></li>
-            <li><a href="todas-categorias"><i class="fa fa-bar-chart fa-fw"></i>Todas as categorias</a></li>
+            <li><a href="/" class="active"><i class="fa fa-home fa-fw"></i>Principal</a></li>
+	    <li><a href="todas-categorias"><i class="fa fa-bar-chart fa-fw"></i>Todas as categorias</a></li>
             <!-- <li><a href="data-visualization.html"><i class="fa fa-database fa-fw"></i>Data Visualization</a></li> -->
             <!-- <li><a href="maps.html"><i class="fa fa-map-marker fa-fw"></i>Maps</a></li> -->
             <!-- <li><a href="manage-users.html"><i class="fa fa-users fa-fw"></i>Manage Users</a></li> -->
