--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,16 @@
           </div>
 	  {{ range $i, $categoria := .Categorias }}
             <div class="col-1">
-              <div class="panel panel-default templatemo-content-widget white-bg no-padding templatemo-overflow-hidden">
+              <div class="panel panel-default templatemo-content-widget white-bg col-2 templatemo-position-relative no-padding">
                 <i class="fa fa-times"></i>
-		
-                <div class="panel-heading templatemo-position-relative"><h2 class="text-uppercase">{{$categoria.Nome}} - para ler: {{ $categoria.NaoLidos }}</h2></div>
+		<div class="panel-heading text-center">
+                <div class="media-body">
+		    <h2 class="text-uppercase">{{$categoria.Nome}} - para ler: {{ $categoria.NaoLidos }}</h2>
+		</div>
+	       	<div class="media-body">
+                 <a href="categoria/{{$categoria.Nome}}" class="btn btn-default">View</a>
+		</div>
+		</div>
 		<div class="table-responsive">
 		  <table class="table table-striped table-bordered">
 		    <tbody>
@@ -33,6 +39,7 @@
 
 		    </tbody>
 		  </table>
+		  
 		</div>
 
                 
